Delete my account form ui

--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -5,6 +5,10 @@
 	margin: 0px 5px 10px 5px;
 	font-family: $font-handwritten;
 }
+.form-note {
+	text-align: right;
+	margin-bottom: 10px;
+}
 
 .login-form {
 	margin-top: 10vh;
