--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -39,4 +39,20 @@
 		</div>
 		<button type="submit" class="form-btn small-btn">Update Password</button>
 	</form>
+
+	<br><br>
+
+
+	<form [formGroup]="deleteAccountForm" (ngSubmit)="submitDeleteAccountForm()" class="form detail-form">
+		<h3 class="form-title">Delete account</h3>
+		<div class="form-note">
+			<p>Warning! This action is irreversible!</p>
+			<p>Please type in "<strong>I want to delete my account</strong>" to confirm.</p>
+		</div>
+		<div class="form-group">
+			<label class="form-group-label">Sequrity quote</label>
+			<input class="form-input" type="text" formControlName="confirmDelete">
+		</div>
+		<button type="submit" class="form-btn small-btn">Delete my account</button>
+	</form>
 </div>
