Update Project details page ui

--- a/src/assets/scss/pages/_project-detail.scss
+++ b/src/assets/scss/pages/_project-detail.scss
@@ -11,10 +11,10 @@
 
 .file-list {
 	.file-list-item {
-		margin-top: 10px;
-		padding-top: 10px;
-		border-top: 1px solid $gallery; 
-		
+		margin-bottom: 10px;
+		padding-bottom: 10px;
+		border-bottom: 1px solid $gallery;
+
 		display: flex;
 		flex-direction: row;
 
@@ -36,8 +36,8 @@
 			flex-grow: 2;
 			* {
 				float: right;
-			}	
+			}
 		}
 	}
-	
+
 }
