Update Project details page ui

--- a/src/app/shared/components/file-uploader/file-uploader.component.html
+++ b/src/app/shared/components/file-uploader/file-uploader.component.html
@@ -1,5 +1,5 @@
 <div class="file-uploader-container">
 	<div dropzone class="dropzone" (hovered)="toggleHover($event)" (dropped)="onDrop($event)" [class.hovering]="isHovering">
-		<h4>Drop files here</h4>
+		<h4>drop files here</h4>
 	</div>
 </div>
