--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -1,58 +1,57 @@
 <!-- <h2 class="page-header">page header</h2> -->
-<div class="project-data-container">
-	<h3>Project details</h3>
+<h2 class="page-header">Project Name Here</h2>
 
+<div class="project-data-container">
 
 	<form [formGroup]="projectDetailForm" (ngSubmit)="savePojectDetailForm()" class="form detail-form">
-		<div class="form-group form-group-editable">
-			<label class="form-group-label">
-				Name
-			</label>
-			<div class="form-input">
-				<input formControlName="name" placeholder="Enter project name">
-				<button class="form-group-button">
-					<i class="fa fa-save" (click)="onSaveClicked(file)"></i>
-				</button>
-			</div>
+		<h3 class="form-title">Project details</h3>
+		<div class="form-group">
+			<label class="form-group-label">Project name</label>
+			<input class="form-input" type="text" formControlName="name">
 		</div>
-
-		<div class="form-group form-group-editable">
-			<label class="form-group-label">
-				Description
-			</label>
-			<div class="form-input">
-				<textarea formControlName="description" placeholder="Enter project description"></textarea>
-				<button class="form-group-button">
-					<i class="fa fa-save" (click)="onSaveClicked(file)"></i>
-				</button>
-			</div>
+		<div class="form-group">
+			<label class="form-group-label">Description</label>
+			<input class="form-input" type="text" formControlName="description">
 		</div>
+		<button type="submit" class="form-btn small-btn">Update project details</button>
 	</form>
 
-	<h4>Upload more files</h4>
-	<app-file-uploader (onFilesDrop)="uploadFiles($event)"></app-file-uploader>
+	<br><br>
 
-	<hr>
-	<button type="button" class="form-btn" (click)="navToPlay()">Play</button>
 
-</div>
 
-<div class="project-files-container">
-	<h3>Project files</h3>
 
-	<ul class="file-list">
-		<li *ngIf="!files.length" class="file-list-item">
-			<i>No files have been uploaded yet</i>
-		</li>
+	<div class="form detail-form">
+		<h3 class="form-title">Project files</h3>
+		<ul class="file-list">
+			<li *ngIf="!files.length" class="file-list-item">
+				<i>No files have been uploaded yet</i>
+			</li>
 
-		<li *ngFor="let newfile of filesToUpload">
-			File {{newfile.name}} is being uploaded ...
-		</li>
+			<li *ngFor="let file of files">
+				<app-file-list-item [file]="file" (onSave)="saveFile(file)" (onDelete)="delete(file)"
+									(onEdit)="navToEdit(file)">
+				</app-file-list-item>
+			</li>
 
-		<li *ngFor="let file of files">
-			<app-file-list-item [file]="file" (onSave)="saveFile(file)" (onDelete)="delete(file)"
-				(onEdit)="navToEdit(file)">
-			</app-file-list-item>
-		</li>
-	</ul>
+			<li *ngFor="let newfile of filesToUpload">
+				File {{newfile.name}} is being uploaded ...
+			</li>
+
+		</ul>
+	</div>
+
+	<br><br>
+
+	<div class="form detail-form">
+		<h3 class="form-title">Upload more files</h3>
+		<app-file-uploader (onFilesDrop)="uploadFiles($event)"></app-file-uploader>
+	</div>
+
+
+	<br><br>
+
+<button type="button" class="form-btn small-btn" (click)="navToPlay()">Play</button>
+
+
 </div>
