--- a/src/assets/scss/components/_file-uploader.scss
+++ b/src/assets/scss/components/_file-uploader.scss
@@ -3,28 +3,28 @@
 	display: block;
 	// height: 100%;
 }
-.dropzone { 
+.dropzone {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-direction: column; 
+	flex-direction: column;
 	font-weight: 200;
 	height: 100%;
 	min-height: 100px;
-	border: 2px dashed $theme-accent;
+	border: 2px dashed $theme-focus;
 	border-radius: 5px;
 	background: white;
-  
+
 	&.hovering {
 		border: 2px solid $theme-accent;
-		color: #dadada !important;
+		color: $theme-background !important;
 	}
-  
+
 	.file-label {
 		font-size: 1.2em;
 	}
 }
-  
+
 progress::-webkit-progress-value {
 	transition: width 0.1s ease;
 }
