--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -8,7 +8,7 @@
 		<label>Password</label>
 		<input type="password" formControlName="password">
 	</div>
-	<button type="submit" class="form-btn">Submit</button>
+	<button type="submit" class="btn form-btn">Submit</button>
 	<br><br>
 	<a [routerLink]="['/register']">or create a new account</a>
 </form>
