--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -1,5 +1,5 @@
 <!-- <h2 class="page-header">page header</h2> -->
-<h2 class="page-header">Project Name Here</h2>
+<script src="file-list-item/file-list-item.component.ts"></script><h2 class="page-header">Project Name Here</h2>
 
 <div class="project-data-container">
 
@@ -13,12 +13,10 @@
 			<label class="form-group-label">Description</label>
 			<input class="form-input" type="text" formControlName="description">
 		</div>
-		<button type="submit" class="form-btn small-btn">Update project details</button>
+		<button type="submit" class="btn form-btn small-btn">Update project details</button>
 	</form>
 
 	<br><br>
-
-
 
 
 	<div class="form detail-form">
@@ -51,7 +49,7 @@
 
 	<br><br>
 
-<button type="button" class="form-btn small-btn" (click)="navToPlay()">Play</button>
+<button type="button" class="btn form-btn small-btn" (click)="navToPlay()">Play</button>
 
 
 </div>
