--- a/src/app/main/projects/project-edit/selection-menu/selection-menu.component.html
+++ b/src/app/main/projects/project-edit/selection-menu/selection-menu.component.html
@@ -3,7 +3,7 @@
 		<i class="fa fa-times"></i>
 	</button>
 
-	<form [formGroup]="linkToFileForm" (ngSubmit)="submitLinkToFileForm()" class="form"> 
+	<form [formGroup]="linkToFileForm" (ngSubmit)="submitLinkToFileForm()" class="form">
 		<div class="form-group">
 			<label>Link to:</label>
 			<select formControlName="fileId" class="select">
@@ -12,7 +12,7 @@
 				</ng-container>
 			</select>
 		</div>
-		<button type="submit" class="form-btn">Save</button>
+		<button type="submit" class="btn form-btn">Save</button>
 	</form>
 
 </div>
