--- a/src/assets/scss/pages/_project-detail.scss
+++ b/src/assets/scss/pages/_project-detail.scss
@@ -11,31 +11,27 @@
 
 .file-list {
 	.file-list-item {
-		margin-bottom: 10px;
-		padding-bottom: 10px;
-		border-bottom: 1px solid $gallery;
-
+		margin-bottom: 20px;
+		padding: 8px;
 		display: flex;
 		flex-direction: row;
 
 		.page-preview {
 			flex-grow: 2;
-
-			height: 120px;
-
 			background-color: $gallery;
 			background-position: center;
 			background-size: cover;
 			border-radius: 3px;
-		}
-		.item-description {
-			flex-grow: 4;
-			// display: inline-block;
+			border: 1px $gallery solid;
 		}
 		.item-actions {
-			flex-grow: 2;
-			* {
-				float: right;
+			display: flex;
+			justify-content: flex-end;
+			margin: 0px 5px 5px 5px;
+			align-self: flex-end;
+			.btn {
+				margin-left: 10px;
+				margin-top: 34px;
 			}
 		}
 	}
