styling editor page, buttons globally

--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -37,7 +37,7 @@
 			<label class="form-group-label">Confirm password</label>
 			<input class="form-input" type="password" formControlName="confirmPassword">
 		</div>
-		<button type="submit" class="btn form-btn small-btn">Update Password</button>
+		<button type="submit" class="btn success-btn form-btn">Update Password</button>
 	</form>
 
 	<br><br>
@@ -53,6 +53,6 @@
 			<label class="form-group-label">Sequrity quote</label>
 			<input class="form-input" type="text" formControlName="confirmDelete">
 		</div>
-		<button type="submit" class="btn form-btn small-btn">Delete my account</button>
+		<button type="submit" class="btn success-btn form-btn">Delete my account</button>
 	</form>
 </div>
