--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -12,7 +12,7 @@
 			<label class="form-group-label">Description</label>
 			<input class="form-input" type="text" formControlName="description">
 		</div>
-		<button type="submit" class="btn form-btn small-btn">Update project details</button>
+		<button type="submit" class="btn success-btn form-btn">Update project details</button>
 	</form>
 
 	<br><br>
@@ -48,7 +48,7 @@
 
 	<br><br>
 
-<button type="button" class="btn info-btn small-btn" (click)="navToPlay()">Preview Mode</button>
+<button type="button" class="btn info-btn" (click)="navToPlay()">Preview Mode</button>
 
 
 </div>
