--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -9,4 +9,5 @@
 	[clickableAreas]="links">
 </app-linker>
 
-<app-aside (onShowLinks)="onShowLinks($event)"></app-aside>
+<app-aside (onShowLinks)="onShowLinks($event)">
+</app-aside>
