--- a/src/app/main/projects/project-edit/selection-menu/selection-menu.component.html
+++ b/src/app/main/projects/project-edit/selection-menu/selection-menu.component.html
@@ -12,7 +12,7 @@
 				</ng-container>
 			</select>
 		</div>
-		<button type="submit" class="btn form-btn">Save</button>
+		<button type="submit" class="btn success-btn form-btn">Save</button>
 	</form>
 
 </div>
