--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -6,6 +6,7 @@
 $border-width: 2px;
 
 $nav-height: 70px;
+$aside-width: 200px;
 
 $font-handwritten: 'Indie Flower', cursive;
 $font-normal: 'Athiti', sans-serif;
