--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -24,5 +24,5 @@
 	<div class="form-group">
 		<p>Fields marked with <app-star-badge></app-star-badge> are required</p>
 	</div>
-	<button type="submit" class="btn form-btn">Submit</button>
+	<button type="submit" class="btn success-btn form-btn">Submit</button>
 </form>
