--- a/src/app/main/projects/project-detail/file-list-item/file-list-item.component.html
+++ b/src/app/main/projects/project-detail/file-list-item/file-list-item.component.html
@@ -8,13 +8,13 @@
 			<input class="form-input" type="text" formControlName="name" placeholder="A short declarative name would help...">
 		</div>
 		<div class="flex-col-container item-actions">
-			<button type="submit" class="btn form-btn small-btn">
+			<button type="submit" class="btn success-btn form-btn">
 				Update page name
 			</button>
-			<button type="button" class="btn info-btn small-btn" (click)="onEditClicked(file)">
+			<button type="button" class="btn info-btn" (click)="onEditClicked(file)">
 				Open page in Editor
 			</button>
-			<button type="button" class="btn danger-btn small-btn" (click)="onDeleteClicked(file)">
+			<button type="button" class="btn danger-btn" (click)="onDeleteClicked(file)">
 				Delete page
 			</button>
 		</div>
