--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -22,7 +22,7 @@
 		<h3 class="form-title">Files</h3>
 		<ul class="file-list">
 			<li *ngIf="!files.length" class="file-list-item">
-				<i>No files have been uploaded yet</i>
+				<p>No files have been uploaded yet</p>
 			</li>
 
 			<li *ngFor="let file of files">
