--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -91,7 +91,8 @@
 			padding: 12px 10px;
 		}
 		input,
-		textarea {
+		textarea,
+		select {
 			flex-grow: 3;
 			border: 2px solid $mercury;
 			border-radius: 4px;
@@ -103,16 +104,5 @@
 				font-size: 0.8em;
 			}
 		}
-		.form-group-button {
-			//padding: 12px;
-			//border:none;
-			//border-radius: 4px;
-			//background-color: $mercury;
-			//color: $white;
-			//i {
-			//	color: $white;
-			//}
-		}
-
 	}
 }
