--- a/src/assets/scss/layout/_item-gallery.scss
+++ b/src/assets/scss/layout/_item-gallery.scss
@@ -13,7 +13,7 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 	overflow: hidden;
 
 	border-radius: 4px;
-	background-color: $theme-background;
+	background-color: $theme-light;
 
 	margin: 20px;
 
@@ -66,7 +66,7 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 
 		padding: 10px;
 		height: 3em;
-		background-color: $theme-background;
+		background-color: $theme-light;
 		border: 1px $gallery solid;
 		border-bottom-left-radius: 4px;
 		border-bottom-right-radius: 4px;
