--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -50,7 +50,7 @@
 			<p>Please type in "<strong>I want to delete my account</strong>" to confirm.</p>
 		</div>
 		<div class="form-group">
-			<label class="form-group-label">Sequrity quote</label>
+			<label class="form-group-label">Security quote</label>
 			<input class="form-input" type="text" formControlName="confirmDelete">
 		</div>
 		<button type="submit" class="btn success-btn form-btn">Delete my account</button>
