--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -45,10 +45,24 @@
 		<app-file-uploader (onFilesDrop)="uploadFiles($event)"></app-file-uploader>
 	</div>
 
+	<br><br>
+
+	<button type="button" class="btn info-btn" (click)="navToPlay()">Preview Mode</button>
 
 	<br><br>
 
-<button type="button" class="btn info-btn" (click)="navToPlay()">Preview Mode</button>
+	<form [formGroup]="deleteProjectForm" (ngSubmit)="submitDeleteProjectForm()" class="form detail-form">
+		<h3 class="form-title">Delete project</h3>
+		<div class="form-note">
+			<p>Warning! This action is irreversible!</p>
+			<p>Please type in "<strong>I want to delete this project</strong>" to confirm.</p>
+		</div>
+		<div class="form-group">
+			<label class="form-group-label">Security quote</label>
+			<input class="form-input" type="text" formControlName="confirmDelete">
+		</div>
+		<button type="submit" class="btn success-btn form-btn">Delete this project</button>
+	</form>
 
 
 </div>
