--- a/src/assets/scss/components/_selection-menu.scss
+++ b/src/assets/scss/components/_selection-menu.scss
@@ -8,7 +8,7 @@
 
 	border: $border-width solid $mercury;
 	border-radius: 4px;
-	background-color: $theme-background;
+	background-color: $theme-light;
 
 	select {
 		max-width: 75%;
