--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -8,6 +8,7 @@
 		<label>Password</label>
 		<input type="password" formControlName="password">
 	</div>
+	<p class="text-error" *ngIf="loginFormErrorMessage && !loginForm.dirty">Try again! {{ loginFormErrorMessage }}</p>
 	<button type="submit" class="btn success-btn form-btn">Submit</button>
 	<br><br>
 	<a [routerLink]="['/register']">or create a new account</a>
