editor aside menu preview files, select active file

--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -9,5 +9,7 @@
 	[clickableAreas]="links">
 </app-linker>
 
-<app-aside (onShowLinks)="onShowLinks($event)">
+<app-aside
+	(onShowLinks)="onShowLinks($event)"
+	(onChangeActiveFile)="onChangeActiveFile($event)">
 </app-aside>
