--- a/src/app/main/projects/project-edit/aside/aside.component.html
+++ b/src/app/main/projects/project-edit/aside/aside.component.html
@@ -1,11 +1,18 @@
 <aside>
 	<ul class="aside-menu">
 		<li class="menu-item">
-			<button type="submit" class="btn light-btn wide-btn" (click)="navigateBack()">Back</button>
+			<button type="button" class="btn light-btn wide-btn" (click)="navigateBack()">Back</button>
+		</li>
+		<li class="menu-item">
+			<button type="button" class="btn light-btn wide-btn" (click)="saveChanges()">Save Changes</button>
 		</li>
 		<li class="menu-item">
 			<label>Show Links</label>
 			<app-button-toggle (click)="showLinks($event)"></app-button-toggle>
+		</li>
+		<li class="menu-item">Uploaded Files</li>
+		<li class="menu-item" *ngFor="let file of files" (click)="selectFile(file)">
+			<img class="menu-img-item" [src]="file.downloadURL" [alt]="file.name">
 		</li>
 	</ul>
 </aside>
