refactor project edit component event naming

--- a/src/app/main/projects/project-edit/aside/aside.component.html
+++ b/src/app/main/projects/project-edit/aside/aside.component.html
@@ -4,7 +4,7 @@
 			<button type="button" class="btn light-btn wide-btn" (click)="navigateBack()">Back</button>
 		</li>
 		<li class="menu-item">
-			<button type="button" class="btn light-btn wide-btn" (click)="saveChanges()">Save Changes</button>
+			<button type="button" class="btn light-btn wide-btn" (click)="saveAllChanges()">Save Changes</button>
 		</li>
 		<li class="menu-item">
 			<label>Show Links</label>
