--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -11,6 +11,6 @@
 
 <app-aside
 	(onShowLinks)="onShowLinks($event)"
-	(onSaveAllChanges)="onSaveAllChanges()"
+	(onSaveAllChanges)="onSaveChanges()"
 	(onChangeActiveFile)="onChangeActiveFile($event)">
 </app-aside>
