--- a/src/app/main/projects/project-edit/aside/aside.component.html
+++ b/src/app/main/projects/project-edit/aside/aside.component.html
@@ -6,10 +6,9 @@
 		<li class="menu-item">
 			<button type="button" class="btn light-btn wide-btn" (click)="saveAllChanges()">Save Changes</button>
 		</li>
-<!--		<li class="menu-item">-->
-<!--			<label>Show Links</label>-->
-<!--			<app-button-toggle (click)="toggleLinks($event)"></app-button-toggle>-->
-<!--		</li>-->
+		<li class="menu-item">
+			<button type="button" class="btn light-btn wide-btn" (click)="toggleLinks()">Toggle Links</button>
+		</li>
 		<li class="menu-item">Uploaded Files</li>
 		<li class="menu-item" *ngFor="let file of files" (click)="selectFile(file)">
 			<figure>
