switch images by clicking on link areas in preview mode

--- a/src/app/main/projects/project-present/project-present.component.html
+++ b/src/app/main/projects/project-present/project-present.component.html
@@ -2,7 +2,8 @@
 <app-editor
 	[imgUrl]="file.downloadURL"
 	[showLinks]="showLinks"
-	[mode]="'preview'">
+	[mode]="'preview'"
+	(onLinkAreaClicked)="onLinkAreaClicked($event)">
 </app-editor>
 
 <app-aside
