routes naming refactoring

--- a/src/app/main/projects/project-list/project-list.component.html
+++ b/src/app/main/projects/project-list/project-list.component.html
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 
-	<div class="item-preview-container create-new-item" [routerLink]="0">
+	<div class="item-preview-container create-new-item" [routerLink]="'new'">
 		<i class="fa fa-plus"></i>
 		<p>Create new project</p>
 	</div>
