custom grid system for desktop screen sizes

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,6 +1,8 @@
 // Styles for commonly used HTML elements
 
-// Example
+html {
+	box-sizing: border-box;
+}
 html,
 body {
     background: $theme-background;
