--- a/src/app/main/projects/project-details/project-details.component.html
+++ b/src/app/main/projects/project-details/project-details.component.html
@@ -1,30 +1,38 @@
 
 <div class="row">
 
-	<div class="col-1"> <p> col 1 </p> </div>
-	<div class="col-11"> <p> col 11 </p> </div>
+	<div class="col-2 aside-menu">
+		<ul class="vertical-menu">
+			<li class="menu-item">
+				<h3>My project name</h3>
+			</li>
+			<li><hr></li>
+			<li class="menu-item">
+				<a>Preview Flow</a>
+			</li>
+			<li class="menu-item">
+				<a>Edit Flow</a>
+			</li>
+			<li><hr></li>
+			<li class="menu-item">
+				<a>Inspect Files</a>
+			</li>
+			<li class="menu-item">
+				<a>Upload Files</a>
+			</li>
+			<li><hr></li>
+			<li class="menu-item">
+				<a>Edit Project Details</a>
+			</li>
+			<li class="menu-item">
+				<a>Delete Project</a>
+			</li>
+		</ul>
+	</div>
 
-	<div class="col-2"> <p> col 2 </p> </div>
-	<div class="col-10"> <p> col 10 </p> </div>
+	<div class="col-9">
 
-	<div class="col-1"> <p> col 1 </p> </div>
-	<div class="col-1"> <p> col 1 </p> </div>
-	<div class="col-10"> <p> col 10 </p> </div>
-
-	<div class="col-3"> <p> col 3 </p> </div>
-	<div class="col-9"> <p> col 9 </p> </div>
-
-	<div class="col-4"> <p> col 4 </p> </div>
-	<div class="col-8"> <p> col 8 </p> </div>
-
-	<div class="col-5"> <p> col 5 </p> </div>
-	<div class="col-7"> <p> col 7</p> </div>
-
-	<div class="col-6"> <p> col 6 </p> </div>
-	<div class="col-6"> <p> col 6 </p> </div>
-
-	<div class="col-12"> <p> col 12 </p> </div>
-
+	</div>
 
 </div>
 
