--- a/src/assets/scss/layout/_grid.scss
+++ b/src/assets/scss/layout/_grid.scss
@@ -19,40 +19,42 @@
 
 /* Desktop screen Sizes */
 @media only screen and (min-width: 768px) {
-	.col-1 {
-		flex: 0 0 8.33%
-	}
-	.col-2 {
-		flex: 0 0 16.66%;
-	}
-	.col-3 {
-		flex: 0 0 25%;
-	}
-	.col-4 {
-		flex: 0 0 33.33%;
-	}
-	.col-5 {
-		flex: 0 0 41.66%;
-	}
-	.col-6 {
-		flex: 0 0 50%;
-	}
-	.col-7 {
-		flex: 0 0 58.33%;
-	}
-	.col-8 {
-		flex: 0 0 66.66%;
-	}
-	.col-9 {
-		flex: 0 0 75%;
-	}
-	.col-10 {
-		flex: 0 0 83.34%;
-	}
-	.col-11 {
-		flex: 0 0 91.67%;
-	}
-	.col-12 {
-		flex: 0 0 100%;
+	.row {
+		.col-1 {
+			flex: 0 0 8.33%
+		}
+		.col-2 {
+			flex: 0 0 16.66%;
+		}
+		.col-3 {
+			flex: 0 0 25%;
+		}
+		.col-4 {
+			flex: 0 0 33.33%;
+		}
+		.col-5 {
+			flex: 0 0 41.66%;
+		}
+		.col-6 {
+			flex: 0 0 50%;
+		}
+		.col-7 {
+			flex: 0 0 58.33%;
+		}
+		.col-8 {
+			flex: 0 0 66.66%;
+		}
+		.col-9 {
+			flex: 0 0 75%;
+		}
+		.col-10 {
+			flex: 0 0 83.34%;
+		}
+		.col-11 {
+			flex: 0 0 91.67%;
+		}
+		.col-12 {
+			flex: 0 0 100%;
+		}
 	}
 }
