--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,7 @@
 @import './assets/scss/pages/_home';
 @import './assets/scss/pages/_contact';
 @import './assets/scss/pages/_user-profile';
-@import './assets/scss/pages/_project-detail';
+@import 'assets/scss/pages/_project-details';
 @import './assets/scss/pages/_project-list';
 
 // Themes
