routing project details component - wip

--- a/src/app/main/projects/project-details/project-details.component.html
+++ b/src/app/main/projects/project-details/project-details.component.html
@@ -8,25 +8,38 @@
 			</li>
 			<li><hr></li>
 			<li class="menu-item">
-				<a>Preview Flow</a>
+				<a [routerLink]="['/flow-preview']">
+					Preview Flow
+				</a>
 			</li>
 			<li class="menu-item">
-				<a>Edit Flow</a>
+				<a [routerLink]="['/flow-edit']">
+					Edit Flow
+				</a>
 			</li>
 			<li><hr></li>
 			<li class="menu-item">
-				<a>Inspect Files</a>
+				<a [routerLink]="['/files-inspect']">
+					Inspect Files
+				</a>
 			</li>
 			<li class="menu-item">
-				<a>Upload Files</a>
+				<a [routerLink]="['/files-add']">
+					Upload Files
+				</a>
 			</li>
 			<li><hr></li>
 			<li class="menu-item">
-				<a>Edit Project Details</a>
+				<a [routerLink]="['/edit']">
+					Edit Project Details
+				</a>
 			</li>
 			<li class="menu-item">
-				<a>Delete Project</a>
+				<a [routerLink]="['/delete']">
+					Delete Project
+				</a>
 			</li>
+			<li><hr></li>
 		</ul>
 	</div>
 
