--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -9,6 +9,11 @@
 	text-align: right;
 	margin-bottom: 10px;
 }
+.form-error {
+	text-align: center;
+	margin-bottom: 10px;
+	color: $theme-error;
+}
 
 .login-form {
 	margin-top: 10vh;
