projects list resolver

--- a/src/app/main/projects/project/project.component.html
+++ b/src/app/main/projects/project/project.component.html
@@ -4,7 +4,7 @@
 	<div class="col-2 aside-menu">
 		<ul class="vertical-menu">
 			<li class="menu-item">
-				<h3>My project name</h3>
+				<h3>{{projectName}}</h3>
 			</li>
 			<li><hr></li>
 			<li class="menu-item">
