project details form component

--- a/src/app/main/projects/project/project-delete-form/project-delete-form.component.html
+++ b/src/app/main/projects/project/project-delete-form/project-delete-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="deleteProjectForm" (ngSubmit)="submitDeleteProjectForm()" class="form detail-form">
-	<h3 class="form-title">Delete project</h3>
+	<h3 class="form-title">Delete Project</h3>
 	<div class="form-note">
 		<p>Warning! This action is irreversible!</p>
 		<p>Please type in "<strong>I want to delete this project</strong>" to confirm.</p>
