--- a/src/app/main/projects/project/project-details-form/project-details-form.component.html
+++ b/src/app/main/projects/project/project-details-form/project-details-form.component.html
@@ -1,1 +1,14 @@
-<p>project-details-form works!</p>
+
+
+<form [formGroup]="projectDetailForm" (ngSubmit)="submitProjectDetailForm()" class="form detail-form">
+	<h3 class="form-title">Edit Project Details</h3>
+	<div class="form-group">
+		<label class="form-group-label">Project name</label>
+		<input class="form-input" type="text" formControlName="name">
+	</div>
+	<div class="form-group">
+		<label class="form-group-label">Description</label>
+		<input class="form-input" type="text" formControlName="description">
+	</div>
+	<button type="submit" class="btn success-btn form-btn">Save</button>
+</form>
